# cookiecutter-cfs-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  DEVELOPER_NOTES.rst  README.md  README.rst  cookiecutter.json  ruff.toml  tox.ini
ci/: bootstrap.py  check_rendered_config.py  env_test.py  readme.json  render.py  setup.cfg
ci/envs/: 1-defaults.cookiecutterrc  2-capitol-letter-slug.cookiecutterrc  2-disparate-repo.cookiecutterrc  2-no_library.cookiecutterrc
ci/templates/: README.rst  tox.ini
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.app_repo}}/: .cookiecutterrc  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
{{cookiecutter.app_repo}}/.github/: pull_request_template.md
{{cookiecutter.app_repo}}/.github/workflows/: codeql-build.yml
{{cookiecutter.app_repo}}/fsw/mission_inc/: {{cookiecutter.__app_filename_slug}}_perfids.h
{{cookiecutter.app_repo}}/fsw/platform_inc/: {{cookiecutter.__app_filename_slug}}_msgids.h  {{cookiecutter.__app_filename_slug}}_table.h
{{cookiecutter.app_repo}}/fsw/src/: {{cookiecutter.__app_filename_slug}}.c  {{cookiecutter.__app_filename_slug}}_msg.h  {{cookiecutter.__app_filename_slug}}_version.h
{{cookiecutter.app_repo}}/fsw/tables/: {{cookiecutter.__app_filename_slug}}_tbl.c
{{cookiecutter.app_repo}}/unit-test/: CMakeLists.txt
{{cookiecutter.app_repo}}/unit-test/coveragetest/: coveragetest_{{cookiecutter.__app_filename_slug}}.c  {{cookiecutter.__app_filename_slug}}_coveragetest_common.h
{{cookiecutter.app_repo}}/unit-test/inc/: ut_{{cookiecutter.__app_filename_slug}}.h
{{cookiecutter.app_slug}}/: .cookiecutterrc  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
{{cookiecutter.app_slug}}/.github/workflows/: codeql-build.yml
{{cookiecutter.app_slug}}/fsw/mission_inc/: {{cookiecutter.__app_filename_slug}}_perfids.h
{{cookiecutter.app_slug}}/fsw/platform_inc/: {{cookiecutter.__app_filename_slug}}_msgids.h
(+9 files in other folders)
